<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaludoPersonalizado</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="entrada"></string>
    <string name="b_saludo">Hola</string>
    <string name="hola">Saludo</string>
    <string name="senor">Sr</string>
    <string name="senora">Sra</string>
    <string name="tiempo">¿Mostrar hora y fecha?</string>
    <string name="noNameMsg">Introduce un nombre</string>

</resources>
